# faex

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  profiling.rs  util.rs
src/bit_vectors/: mod.rs
src/bit_vectors/bitvec/: iter.rs  mod.rs
src/bit_vectors/bitvec/tests/: iter.rs  mod.rs
src/bit_vectors/rank_select/: mod.rs  tests_utils.rs
src/bit_vectors/rank_select/dense_sampling_rank/: mod.rs  tests.rs
src/bit_vectors/rank_select/sparse_sampling_rank/: mod.rs  tests.rs
src/bit_vectors/rank_select/sparse_sampling_select/: mod.rs
src/bit_vectors/rrr_bitvec/: mod.rs
src/bit_vectors/rrr_bitvec/tests/: mod.rs
src/bit_vectors/sd_vec/: mod.rs
src/character_sequence/: mod.rs
src/character_sequence/wavelet_tree/: mod.rs  tests.rs
src/int_vectors/: mod.rs
src/int_vectors/compact_int_vec/: iter.rs  mod.rs  tests.rs
src/int_vectors/variable_size_int_vec/: iter.rs  mod.rs  tests.rs
