[package]
name = "faex"
version = "0.1.0"
edition = "2021"
authors =["Jorge Hermo"]
description= "A fast and efficient Compact Data Structures Library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.182", features = ["derive"] }

[dev-dependencies]
paste = "1.0.12"

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false
codegen-units = 1
panic = "abort"

